# RainHawk

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  index.md  instructions.md  next-steps.md  rainhawk-state.json  rainhawk-state.md  requirements.txt  run.bat  run.sh  serve.bat  serve.sh
featuresum/: dawn-walker__morning-ritual-planner.md
frontend/: server.py
frontend/static/: index.html
projects/dawn-walker/: pyproject.toml
projects/dawn-walker/dawn_walker/: __init__.py  __main__.py  geo.py  models.py  planner.py  render.py  timefmt.py
projects/dawn-walker/examples/: hanoi_dawn.json
projects/dawn-walker/field_spotter/: __init__.py  __main__.py  resolver.py
projects/dawn-walker/morning-ritual-planner/: feature-idea.md  inspiration.md  plan.md  problem-log.md
projects/dawn-walker/tests/: conftest.py  test_cli.py  test_geo.py  test_models.py  test_planner.py  test_render.py  test_timefmt.py
projects/dawn-walker/tests/field_spotter/: conftest.py  test_resolver.py
projects/dawn-walker/vault/: project-charter.md
projects/field-spotter/: pyproject.toml
projects/field-spotter/examples/: garden_foxes.json
projects/field-spotter/field_spotter/: compat.py  explain.py  models.py
projects/field-spotter/sighting-resolver/: feature-idea.md  inspiration.md  plan.md
projects/field-spotter/tests/: test_compat.py  test_models.py
projects/field-spotter/vault/: project-charter.md
runner/: classifier.py  main.py  notify.py  prompts.py  responder.py  session.py
scripts/: pick_words.py
