[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dawn-walker"
version = "0.1.0"
description = "Plan dawn-to-mid-morning ritual itineraries."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["dawn_walker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
