[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "field-spotter"
version = "0.1.0"
description = "Toolkit for analyzing wildlife observation logs."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["field_spotter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
